Added Logout Route & Some Middleware

--- a/src/config/config.sample.env
+++ b/src/config/config.sample.env
@@ -1,4 +1,4 @@
-NODE_ENV=
+NODE_ENV=<DEVELOPMENT | PRODUCTION>
 
 MYSQL_HOST=
 MYSQL_PORT=
@@ -6,9 +6,9 @@ MYSQL_DATABASE=
 MYSQL_USER=
 MYSQL_PASSWORD=
 
-PORT=
+PORT=<port that server should start eg: 5000>
 
-JWT_SECRET=
-JWT_EXPIRES_TIME=
+JWT_SECRET=<provide a random string>
+JWT_EXPIRES_TIME=<time that jwt wants to expireed eg: (7d | 30d)>
 
-COOKIE_EXPIRES_TIME=
+COOKIE_EXPIRES_TIME=<number of dates that cookie want to expire eg: 7>
